[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/textbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/SwitchCommand.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/office/contents.jpg" type="Texture" id=4]
[ext_resource path="res://src/ui/inventory_hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/office/drawer.gd" type="Script" id=6]
[ext_resource path="res://src/ui/Light2D.tscn" type="PackedScene" id=7]

[node name="drawer" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_hud" parent="." instance=ExtResource( 5 )]

[node name="take_gaslight" parent="." instance=ExtResource( 3 )]
margin_left = 335.5
margin_top = 68.5
margin_right = 535.5
margin_bottom = 88.5

[node name="Label" parent="take_gaslight" index="1"]
text = "Take Gas Light"

[node name="to_office" parent="." instance=ExtResource( 3 )]
margin_left = 232.0
margin_top = 353.5
margin_right = 432.0
margin_bottom = 373.5

[node name="Label" parent="to_office" index="1"]
text = "Close Drawer"

[node name="Pause" parent="." instance=ExtResource( 2 )]
visible = false

[node name="textbox" parent="." instance=ExtResource( 1 )]

[node name="Light2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 412.5, 202.5 )

[editable path="take_gaslight"]
[editable path="to_office"]
